--- a/index.html
+++ b/index.html
@@ -5,17 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/logopng.png">
+    <title>Todo a la Essen</title>
 </head>
-<body>
-    <header class="navBar">
+<body id="mainGrid">
+    <header id="navBar">
+        <img src="img/logopng.png" alt="logo">
         <ul>
             <li><a href="">Inicio</a></li>
-            <li><a href="">Contenido</a></li>
             <li><a href="">Productos</a></li>
-            <li><a href="">Servicios</a></li>
-            <li><a href="">Contacto</a></li>
+            <li><a href="">Recetas</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Sobre mi</a></li>
         </ul>
     </header>
+    <main id="main">
+        <article>
+            <img class="banner" src="img/banners/ESSEN (136 de 260).jpg" alt="">
+        </article>
+        <article class="cardContainer">
+            <div class="card">
+                <h3 class="cardText">Envios a todo el pais</h3>
+                <img src="img/logos/delivery-truck.png" alt="envios a todo el pais">
+            </div>
+            <div class="card">
+                <h3 class="cardText">Productos originales</h3>
+                <img src="img/logos/original.png" alt="productos originales">
+            </div>
+            <div class="card">
+                <h3 class="cardText">Asesoramiento Profesional</h3>
+                <img src="img/logos/agreement.png" alt="Asesoramiento Profesional">
+            </div>
+            <div class="card">
+                <h3 class="cardText">Plan canje</h3>
+                <img src="img/logos/exchange.png" alt="Plan canje">
+            </div>
+            <div class="card">
+                <h3 class="cardText">Sumate a mi equipo</h3>
+                <img src="img/logos/professionals.png" alt="Sumate a mi equipo">
+            </div>
+        </article>
+        <article>
+            <img class="banner" src="img/banners/ESSEN (170 de 260).jpg" alt="">
+        </article>
+        <div class="formContainer">
+            <h2>
+            Contactame!
+            </h2>
+            <form action="" method="post" class="form">
+                <label for="nombre">Nombre:</label>
+                <input type="text" value="" placeholder="Ingresa tu nombre">
+                <label for="email">Email:</label>
+                    <input type="text" value="" placeholder="Ingresa tu email">
+    
+                    <label for="nombre">Whatsapp:</label>
+                    <input type="text" value="" placeholder="Ingresa tu numero de Whatsapp">
+    
+                    <input type="reset" value="Limpiar formulario" class="btn">
+                    <input type="submit" value="Enviar" class="btn">
+             </form>
+        </div>
+    </main>
+    <footer id="footer">
+        <div>
+            <h2 class="titulo">
+                Seguime en  mis Redes!
+            </h2>
+            <div class="links">
+                <a href="https://www.facebook.com" target="_blank"><img src="img/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
+
+                <a href="https://www.twitter.com" target="_blank"><img src="img/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
+
+                <a href="https://www.instagram.com" target="_blank"><img src="img/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
+
+                <a href="https://www.whatsapp.com" target="_blank"><img src="img/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
+        </div>
+        </div>
+        <div class="copy">
+            <p>
+                powered by &#169 Nahuel Gallucci
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
