--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header id="navBar">
         <img src="img/logopng.png" alt="logo">
         <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Productos</a></li>
-            <li><a href="">Recetas</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Sobre mi</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="html/productos.html">Productos</a></li>
+            <li><a href="#">Recetas</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sobre mi</a></li>
         </ul>
     </header>
     <main id="main">
@@ -52,7 +52,7 @@
             <img class="banner" src="img/banners/ESSEN (170 de 260).jpg" alt="">
         </article>
         <div class="formContainer">
-            <h2>
+            <h2 class="titulo">
             Contactame!
             </h2>
             <form action="" method="post" class="form">
@@ -77,7 +77,7 @@
             <div class="links">
                 <a href="https://www.facebook.com" target="_blank"><img src="img/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
 
-                <a href="https://www.twitter.com" target="_blank"><img src="img/redes sociales/twiter.png" alt="twiter" class="imgLink"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="img/redes sociales/twitter.png" alt="twitter" class="imgLink"></a>
 
                 <a href="https://www.instagram.com" target="_blank"><img src="img/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
