commit mixin y extend

--- a/html/productos.html
+++ b/html/productos.html
@@ -61,9 +61,11 @@
     </main>
     <footer id="footer">
         <div>
-            <h2 class="titulo">
-                Seguime en  mis Redes!
-            </h2>
+            <title>
+                <h2 class="titulo">
+                    Seguime en  mis Redes!
+                </h2>
+            </title>
             <div class="links">
                 <a href="https://www.facebook.com" target="_blank"><img src="../img/redes sociales/facebook.png" alt="facebook" class="imgLink"></a>
 
