--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap" rel="stylesheet">
+    <meta name="description" content="soy emprendedora Essen oficial, en mi pagina vas a poder encontrar toda la linea de cacerolas y bazar premium Essen ademas de recetas, tips y cuidados para aprovechar tus piezas y que te duren toda la vida, te invito a visitarla ">
+    <meta name="keywords" content="essen, cacerola, sarten, calidad, olla, ollas, Essen">
     <link rel="icon" href="img/logopng.png">
     <title>Todo a la Essen</title>
 </head>
@@ -64,8 +66,8 @@
                     <label for="nombre">Whatsapp:</label>
                     <input type="text" value="" placeholder="Ingresa tu numero de Whatsapp">
     
-                    <input type="reset" value="Limpiar formulario" class="btn">
-                    <input type="submit" value="Enviar" class="btn">
+                    <input type="reset" value="Limpiar formulario" class="btn btn--1">
+                    <input type="submit" value="Enviar" class="btn btn--2">
              </form>
         </div>
     </main>
