commit responsive index

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="html/productos.html">Productos</a></li>
-            <li><a href="#">Recetas</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Sobre mi</a></li>
+            <li><a href="html/recetas.html">Recetas</a></li>
+            <li><a href="html/blog.html">Blog</a></li>
+            <li><a href="html/sobreMi.html">Sobre mi</a></li>
         </ul>
     </header>
     <main id="main">
@@ -72,7 +72,6 @@
         </div>
     </main>
     <footer id="footer">
-        <div>
             <h2 class="titulo">
                 Seguime en  mis Redes!
             </h2>
@@ -84,8 +83,7 @@
                 <a href="https://www.instagram.com" target="_blank"><img src="img/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
                 <a href="https://www.whatsapp.com" target="_blank"><img src="img/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
-        </div>
-        </div>
+            </div>
         <div class="copy">
             <p>
                 powered by &#169 Nahuel Gallucci
