--- a/html/productos.html
+++ b/html/productos.html
@@ -17,9 +17,9 @@
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
-            <li><a href="#">Recetas</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Sobre mi</a></li>
+            <li><a href="recetas.html">Recetas</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="sobreMi.html">Sobre mi</a></li>
         </ul>
     </header>
     <main id="main">
