commit responsive completo

--- a/html/blog.html
+++ b/html/blog.html
@@ -23,10 +23,31 @@
         </ul>
     </header>
     <main id="main">
+        <h1 class="titulo">
+            Blog
+        </h1>
+        <section class="blogCardContainer">   
+            <div class="cardBlog">
+                <h2 class="blogCardTexto">
+                    <a href="../../GallucciNahuel/html/comoCurarTuEssen.html" target="_blank">Como curar tus Essen
+                    </a>
+                </h2>
+                <div class="cardBlogImagen">
+                </div>
+            </div>
 
+            <div class="cardBlog">
+                <h2 class="blogCardTexto">
+                    <a href="../../GallucciNahuel/html/HistoriaDeEssen.html" target="_BLANK">Historia de Essen
+                    </a>
+                </h2>
+                <div class="cardBlogImagen">
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer id="footer">
-        <div>
             <title>
                 <h2 class="titulo">
                     Seguime en  mis Redes!
@@ -40,7 +61,6 @@
                 <a href="https://www.instagram.com" target="_blank"><img src="../img/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
                 <a href="https://www.whatsapp.com" target="_blank"><img src="../img/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
-        </div>
         </div>
         <div class="copy">
             <p>
