--- a/html/recetas.html
+++ b/html/recetas.html
@@ -23,10 +23,50 @@
         </ul>
     </header>
     <main id="main">
-
+        <div>
+            <h1 class="titulo">
+                Recetas
+            </h1>
+            <section class="recetasContainer">   
+                <div class="cardRecetas">
+                    <div class="cardImagen1">
+                    </div>
+                    <div class="cardTexto">
+                        <h3>
+                            Receta1
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae quos sapiente. Harum neque pariatur, inventore dolores iste error quod corporis non mollitia sed dolor nostrum rem assumenda ut illum!
+                        </p>
+                    </div>                
+                </div>
+                <div class="cardRecetas">
+                    <div class="cardImagen2">
+                    </div>
+                    <div class="cardTexto">
+                        <h3>
+                            Receta2
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae quos sapiente. Harum neque pariatur, inventore dolores iste error quod corporis non mollitia sed dolor nostrum rem assumenda ut illum!
+                        </p>
+                    </div>                
+                </div>
+                <div class="cardRecetas">
+                    <div class="cardImagen3">
+                    </div>
+                    <div class="cardTexto">
+                        <h3>
+                            Receta3
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vitae quos sapiente. Harum neque pariatur, inventore dolores iste error quod corporis non mollitia sed dolor nostrum rem assumenda ut illum!
+                        </p>
+                    </div>                
+                </div>
+            </section>
     </main>
     <footer id="footer">
-        <div>
             <title>
                 <h2 class="titulo">
                     Seguime en  mis Redes!
@@ -40,7 +80,6 @@
                 <a href="https://www.instagram.com" target="_blank"><img src="../img/redes sociales/instagram.png" alt="instagram" class="imgLink"></a>
 
                 <a href="https://www.whatsapp.com" target="_blank"><img src="../img/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
-        </div>
         </div>
         <div class="copy">
             <p>
