--- a/html/sobreMi.html
+++ b/html/sobreMi.html
@@ -23,10 +23,26 @@
         </ul>
     </header>
     <main id="main">
-
+        <section>   
+            <h1 class="titulo">
+                Sobre mi
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At sequi nemo repudiandae sit. In eligendi itaque error tempora aliquam laboriosam quos veritatis fuga. Corrupti libero fugiat sequi corporis eius rem!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tempora, voluptate soluta illum saepe suscipit unde totam. Et in modi, sunt magnam, expedita ipsa commodi molestias corporis non dignissimos vitae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed impedit nam dicta praesentium ratione repellat. Repudiandae dignissimos incidunt odio veritatis cumque. Beatae culpa repellat nulla aperiam quod quo excepturi animi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita commodi consequuntur aliquid, fugiat maxime blanditiis distinctio repudiandae numquam et quas dolores architecto explicabo, harum aliquam, unde at veniam cumque nisi!
+                Aliquid et a fugiat, deserunt libero, commodi temporibus corrupti atque voluptas inventore quidem! Iste dicta hic temporibus dolor aliquid voluptates possimus fuga, harum sed. Corporis eveniet magni provident quae repudiandae.
+                Voluptatibus molestiae, eveniet quis aut corrupti laudantium delectus blanditiis, earum excepturi, qui accusamus iusto. Officia consectetur enim a molestiae quibusdam cumque doloribus, laborum suscipit eligendi quae debitis animi voluptatum natus.
+                Dicta iste autem, excepturi saepe libero similique ut qui earum. Nam rem excepturi, officiis ipsum, vel porro quia minima quod voluptatibus aut repellendus, libero recusandae modi iste sequi architecto eum.
+                Rerum aliquam harum perspiciatis delectus esse repellat tempora iure odit exercitationem doloremque, quae, animi sunt dolorum quasi, fugit aut? Repudiandae maiores id nobis tenetur alias dicta inventore magni. Eos, consequuntur.
+                Eum tempore iure suscipit quibusdam ullam similique quisquam. Ipsam, nobis molestiae vel corrupti odio veritatis mollitia fugit quas omnis fugiat iste dicta deleniti, iusto voluptatibus repellat ipsa magnam. Aliquam, ex.
+                Provident voluptas architecto esse suscipit eum sit vel, beatae eius eveniet commodi deserunt perferendis tempora nihil officiis eaque dolores? Enim eos doloremque deleniti delectus in nesciunt numquam, corrupti odit dolores?
+                Tempora ex ab, esse voluptas eos fugiat illum omnis deleniti quod quaerat dicta ad sequi earum aperiam aut ut quis neque nemo rerum consectetur id nobis! Voluptas illum recusandae reiciendis!
+                Quae, provident at impedit neque ad, blanditiis voluptatibus ducimus modi in ratione harum. Similique aperiam quam ad, nostrum, maiores facilis, perspiciatis qui amet cum temporibus quod magni expedita laudantium esse.
+                In quae ducimus amet veritatis, quidem architecto, laboriosam non fuga corporis sapiente delectus corrupti, voluptatum dignissimos magni error? Facilis eius ducimus omnis voluptatum inventore magni delectus unde. Itaque, quibusdam quos.
+            </p>
+        </section>
     </main>
         <footer id="footer">
-            <div>
                 <title>
                  <h2 class="titulo">
                      Seguime en  mis Redes!
@@ -41,7 +57,6 @@
 
                 <a href="https://www.whatsapp.com" target="_blank"><img src="../img/redes sociales/whatsapp.png" alt="whatsapp" class="imgLink"></a>          
                 </div>
-            </div>
             <div class="copy">
                 <p>
                     powered by &#169 Nahuel Gallucci
