--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="soy emprendedora Essen oficial, en mi pagina vas a poder encontrar toda la linea de cacerolas y bazar premium Essen ademas de recetas, tips y cuidados para aprovechar tus piezas y que te duren toda la vida, te invito a visitarla ">
     <meta name="keywords" content="essen, cacerola, sarten, calidad, olla, ollas, Essen">
     <link rel="icon" href="img/logopng.png">
+    <script src="js/index.js"></script>
     <title>Todo a la Essen</title>
 </head>
 <body id="mainGrid">
